Enable secured DB access
Add certificate handling to store handler
Add path to certificate to config
Minor refactortings and comments

--- a/MaterialApi/appsettings.Development.json
+++ b/MaterialApi/appsettings.Development.json
@@ -7,7 +7,8 @@
         }
     },
     "DocumentStore": {
-        "Url": "http://localhost:8282",
-        "Database": "Materials"
+        "Url": "https://s.swdevb.development.run:8383",
+        "Database": "Materials",
+        "PathToCertificate": "../admin.client.certificate.pfx"
     }
 }
