--- a/MaterialApi/appsettings.json
+++ b/MaterialApi/appsettings.json
@@ -8,7 +8,8 @@
     },
     "AllowedHosts": "*",
     "DocumentStore": {
-        "Url": "???",
-        "Database": "???"
+        "Url": "",
+        "Database": "",
+        "pathToCertificate": ""
     }
 }
