Prevent Public Error for failed DocStorHolder creation
Catch exception to prevent public error message
Add better documentation for DB config
Remove locally used DB settings

--- a/MaterialApi/appsettings.Development.json
+++ b/MaterialApi/appsettings.Development.json
@@ -7,8 +7,9 @@
         }
     },
     "DocumentStore": {
-        "Url": "https://s.swdevb.development.run:8383",
-        "Database": "Materials",
-        "PathToCertificate": "../admin.client.certificate.pfx"
+        "Url": "",
+        "Database": "",
+        "PathToCertificate": ""
     }
 }
+
