Add JWT example authentication for GET materials
Add JWT Configuration
Setup Identity (EF in memory)
Setup JWT
Add AuthController
Add Authorize to GET materials

--- a/MaterialApi/appsettings.json
+++ b/MaterialApi/appsettings.json
@@ -11,5 +11,11 @@
         "Url": "",
         "Database": "",
         "pathToCertificate": ""
+    },
+    "JsonWebToken": {
+        "SecretKey": "",
+        "Audience": "https://localhost:5001/",
+        "Issuer": "https://localhost:5001/",
+        "ExpiryTimeInMinutes": 5
     }
 }
